--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ body {
   font-size: 1rem;
   font-family: 'Atkinson Hyperlegible Next', sans-serif;
   font-weight: 400;
-  color: white;
+  color: black;
   background-color: #0F0E17;
   overflow-x: hidden;
   min-height: 100vh;
