--- a/css/animations.css
+++ b/css/animations.css
@@ -1,180 +1,115 @@
 .background {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
+  background: linear-gradient(120deg, #1e1b36, #2f274f, #1e1b36);
   overflow: hidden;
   z-index: -1;
-  /*background: linear-gradient(135deg, #0F0E17 0%, #0F0E17 100%);*/
-  filter: blur(80px);
-  background-image: url("/assets/images/fire_large.webp");
+  animation: hue-shift 60s infinite linear;
 }
 
-/*
-.background::before,
-.background::after,
-.orb-1,
-.orb-2,
-.orb-3,
-.orb-4,
-.orb-5 {
+@keyframes hue-shift {
+  from {
+    filter: hue-rotate(0deg) blur(50px);
+  }
+
+  to {
+    filter: hue-rotate(360deg) blur(50px);
+  }
+}
+
+.background::after {
   content: "";
+  position: absolute;
+  inset: 0;
+  background: url("/assets/bedge-grunge.png") repeat;
+  opacity: 1;
+  pointer-events: none;
+  mix-blend-mode: overlay;
+}
+
+.blob {
   position: absolute;
   width: 60vw;
   height: 60vw;
   border-radius: 50%;
-  filter: blur(80px);
-  mix-blend-mode: screen;
   opacity: 0.7;
-  transform-origin: center center;
+  mix-blend-mode: screen;
+  will-change: transform;
+  filter: blur(80px) contrast(1.2) brightness(1.1);
+  background: radial-gradient(circle at 30% 30%,
+      rgba(var(--c), 0.7),
+      rgba(var(--c), 0.3) 70%,
+      transparent);
+  animation: float var(--d) var(--e) var(--delay) infinite alternate;
 }
 
-.background::before {
-  background: linear-gradient(45deg, #FF8906 0%, #F25F4C 100%);
+.background .blob:nth-child(1) {
   top: -10%;
-  left: -10%;
-  animation: wave1 20s infinite alternate ease-in-out;
+  left: -25%;
+  --c: 205, 180, 219;
+  --d: 28s;
+  --delay: 0s;
+  --e: cubic-bezier(.36, .07, .19, .97);
 }
 
-.background::after {
-  background: linear-gradient(45deg, #E53170 0%, #FF8906 100%);
-  bottom: -20%;
-  right: -10%;
-  animation: wave2 24s infinite alternate ease-in-out;
+.background .blob:nth-child(2) {
+  top: 70%;
+  left: 50%;
+  --c: 162, 210, 255;
+  --d: 22s;
+  --delay: 2s;
+  --e: cubic-bezier(.42, 0, .58, 1);
 }
 
-.orb-1 {
-  background: linear-gradient(45deg, #A786DF 0%, #E53170 100%);
-  top: 30%;
-  left: 25%;
-  width: 40vw;
-  height: 40vw;
-  animation: wave3 30s infinite alternate ease-in-out;
+.background .blob:nth-child(3) {
+  top: -85%;
+  left: 35%;
+  --c: 189, 224, 254;
+  --d: 30s;
+  --delay: 4s;
+  --e: cubic-bezier(.25, .46, .45, .94);
 }
 
-.orb-2 {
-  background: linear-gradient(45deg, #283743 0%, #231745 100%);
-  bottom: 20%;
-  left: 10%;
-  width: 45vw;
-  height: 45vw;
-  animation: wave4 26s infinite alternate ease-in-out;
+.background .blob:nth-child(4) {
+  top: 25%;
+  left: 20%;
+  --c: 255, 200, 221;
+  --d: 24s;
+  --delay: 1s;
+  --e: cubic-bezier(.55, .16, .83, .67);
 }
 
-.orb-3 {
-  background: linear-gradient(45deg, #3b1f00 0%, #390d1c 100%);
-  top: 10%;
-  right: 20%;
-  width: 35vw;
-  height: 35vw;
-  animation: wave2 22s infinite alternate-reverse ease-in-out;
+.background .blob:nth-child(5) {
+  top: 50%;
+  left: 50%;
+  --c: 255, 175, 204;
+  --d: 26s;
+  --delay: 3s;
+  --e: cubic-bezier(.35, 0, .65, 1);
 }
 
-.orb-4 {
-  background: linear-gradient(45deg, #211741 0%, #9f706b 100%);
-  top: 40%;
-  right: 0;
-  width: 50vw;
-  height: 50vw;
-  animation: wave1 28s infinite alternate-reverse ease-in-out;
-}
-
-.orb-5 {
-  background: linear-gradient(45deg, #5b2f2a 0%, #0d2435 100%);
-  bottom: -10%;
-  left: 30%;
-  width: 55vw;
-  height: 55vw;
-  animation: wave3 32s infinite alternate ease-in-out;
-}
-*/
-
-/* Smooth wave-like animations for swirling effect */
-@keyframes wave1 {
+@keyframes float {
   0% {
-    transform: translate(0, 0) scale(1) rotate(0deg);
-  }
-
-  25% {
-    transform: translate(5%, 2%) scale(1.05) rotate(3deg);
-  }
-
-  50% {
-    transform: translate(3%, 5%) scale(1.1) rotate(6deg);
-  }
-
-  75% {
-    transform: translate(-2%, 3%) scale(1.05) rotate(3deg);
-  }
-
-  100% {
-    transform: translate(-5%, -2%) scale(1) rotate(0deg);
-  }
-}
-
-@keyframes wave2 {
-  0% {
-    transform: translate(0, 0) scale(1) rotate(0deg);
+    transform: translate3d(0, 0, 0) scale(1) rotateX(0deg) rotate(0deg);
   }
 
   20% {
-    transform: translate(-3%, 2%) scale(1.03) rotate(-2deg);
+    transform: translate3d(4%, 2%, 1px) scale(1.03) rotateX(2deg) rotate(2deg);
   }
 
   40% {
-    transform: translate(-6%, -1%) scale(1.06) rotate(-4deg);
+    transform: translate3d(2%, 5%, 2px) scale(1.06) rotateX(4deg) rotate(4deg);
   }
 
   60% {
-    transform: translate(-3%, -4%) scale(1.03) rotate(-6deg);
+    transform: translate3d(-2%, 3%, 1px) scale(1.04) rotateX(2deg) rotate(2deg);
   }
 
   80% {
-    transform: translate(2%, -2%) scale(1.06) rotate(-4deg);
+    transform: translate3d(-4%, -1%, 0) scale(1.02) rotateX(1deg) rotate(1deg);
   }
 
   100% {
-    transform: translate(4%, 3%) scale(1) rotate(-2deg);
-  }
-}
-
-@keyframes wave3 {
-  0% {
-    transform: translate(0, 0) scale(1) rotate(0deg);
-  }
-
-  33% {
-    transform: translate(4%, -3%) scale(1.1) rotate(5deg);
-  }
-
-  66% {
-    transform: translate(-2%, -6%) scale(1.15) rotate(10deg);
-  }
-
-  100% {
-    transform: translate(-5%, 3%) scale(1.05) rotate(0deg);
-  }
-}
-
-@keyframes wave4 {
-  0% {
-    transform: translate(0, 0) scale(1) rotate(0deg);
-  }
-
-  25% {
-    transform: translate(3%, 5%) scale(1.05) rotate(-3deg);
-  }
-
-  50% {
-    transform: translate(6%, 2%) scale(1.1) rotate(-6deg);
-  }
-
-  75% {
-    transform: translate(3%, -3%) scale(1.05) rotate(-3deg);
-  }
-
-  100% {
-    transform: translate(-3%, -5%) scale(1) rotate(0deg);
+    transform: translate3d(-5%, -2%, 0) scale(1) rotateX(0deg) rotate(0deg);
   }
 }
