--- a/css/style.css
+++ b/css/style.css
@@ -263,10 +263,33 @@ header {
 
 footer {
   text-align: center;
-  padding: 20px;
+  padding: 2rem 1rem;
   margin-top: 60px;
   font-size: 0.9rem;
   opacity: 0.7;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0 0 1rem;
+  padding: 0;
+}
+
+.social-links li {
+  margin: 0 0.75rem;
+}
+
+.social-links a {
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.2s ease-in-out;
+  color: black;
+}
+
+.social-links a:hover {
+  color: #1da1f2;
 }
 
 .error-message {
