--- a/css/animations.css
+++ b/css/animations.css
@@ -1,20 +1,11 @@
 .background {
   position: fixed;
-  inset: 0;
-  background: linear-gradient(120deg, #1e1b36, #2f274f, #1e1b36);
-  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
-  animation: hue-shift 60s infinite linear;
-}
-
-@keyframes hue-shift {
-  from {
-    filter: hue-rotate(0deg) blur(50px);
-  }
-
-  to {
-    filter: hue-rotate(360deg) blur(50px);
-  }
+  overflow: hidden;
 }
 
 .background::after {
@@ -22,94 +13,90 @@
   position: absolute;
   inset: 0;
   background: url("/assets/bedge-grunge.png") repeat;
-  opacity: 1;
+  opacity: 0.5;
   pointer-events: none;
   mix-blend-mode: overlay;
 }
 
 .blob {
   position: absolute;
-  width: 60vw;
-  height: 60vw;
-  border-radius: 50%;
-  opacity: 0.7;
-  mix-blend-mode: screen;
-  will-change: transform;
-  filter: blur(80px) contrast(1.2) brightness(1.1);
-  background: radial-gradient(circle at 30% 30%,
-      rgba(var(--c), 0.7),
-      rgba(var(--c), 0.3) 70%,
-      transparent);
-  animation: float var(--d) var(--e) var(--delay) infinite alternate;
+  border-radius: 100%;
+  filter: blur(40px);
+  opacity: 0.3;
+  animation: float 20s infinite alternate ease-in-out;
 }
 
-.background .blob:nth-child(1) {
-  top: -10%;
+.blob:nth-child(1) {
+  background: linear-gradient(to right,
+      var(--color-primary),
+      var(--color-secondary));
+  width: 150vw;
+  height: 150vw;
+  top: -100%;
   left: -25%;
-  --c: 205, 180, 219;
-  --d: 28s;
-  --delay: 0s;
-  --e: cubic-bezier(.36, .07, .19, .97);
+  animation-delay: 0s;
 }
 
-.background .blob:nth-child(2) {
-  top: 70%;
-  left: 50%;
-  --c: 162, 210, 255;
-  --d: 22s;
-  --delay: 2s;
-  --e: cubic-bezier(.42, 0, .58, 1);
+.blob:nth-child(2) {
+  background: linear-gradient(to right,
+      var(--color-tertiary),
+      var(--color-secondary));
+  width: 150vw;
+  height: 150vw;
+  bottom: -100%;
+  right: -25%;
+  animation-delay: -5s;
 }
 
-.background .blob:nth-child(3) {
-  top: -85%;
-  left: 35%;
-  --c: 189, 224, 254;
-  --d: 30s;
-  --delay: 4s;
-  --e: cubic-bezier(.25, .46, .45, .94);
-}
-
-.background .blob:nth-child(4) {
-  top: 25%;
-  left: 20%;
-  --c: 255, 200, 221;
-  --d: 24s;
-  --delay: 1s;
-  --e: cubic-bezier(.55, .16, .83, .67);
-}
-
-.background .blob:nth-child(5) {
-  top: 50%;
-  left: 50%;
-  --c: 255, 175, 204;
-  --d: 26s;
-  --delay: 3s;
-  --e: cubic-bezier(.35, 0, .65, 1);
+.blob:nth-child(3) {
+  background: linear-gradient(to right,
+      var(--color-accent),
+      var(--color-primary));
+  width: 100vw;
+  height: 100vw;
+  top: 30%;
+  left: -50%;
+  animation-delay: -10s;
 }
 
 @keyframes float {
   0% {
-    transform: translate3d(0, 0, 0) scale(1) rotateX(0deg) rotate(0deg);
+    transform: translate(0, 0) scale(1);
   }
 
-  20% {
-    transform: translate3d(4%, 2%, 1px) scale(1.03) rotateX(2deg) rotate(2deg);
-  }
-
-  40% {
-    transform: translate3d(2%, 5%, 2px) scale(1.06) rotateX(4deg) rotate(4deg);
-  }
-
-  60% {
-    transform: translate3d(-2%, 3%, 1px) scale(1.04) rotateX(2deg) rotate(2deg);
-  }
-
-  80% {
-    transform: translate3d(-4%, -1%, 0) scale(1.02) rotateX(1deg) rotate(1deg);
+  50% {
+    transform: translate(2%, 2%) scale(1.02);
   }
 
   100% {
-    transform: translate3d(-5%, -2%, 0) scale(1) rotateX(0deg) rotate(0deg);
+    transform: translate(-2%, -2%) scale(0.98);
+  }
+}
+
+@media (min-width: 1024px) {
+  .blob {
+    filter: blur(80px);
+    opacity: 0.5;
+  }
+
+  .blob:nth-child(1) {
+    width: 60vw;
+    height: 60vw;
+    top: -20%;
+    left: -10%;
+  }
+
+  .blob:nth-child(2) {
+    width: 60vw;
+    height: 60vw;
+    bottom: -30%;
+    right: -10%;
+  }
+
+  .blob:nth-child(3) {
+    width: 40vw;
+    height: 40vw;
+    top: 40%;
+    left: 30%;
   }
 }
